feat: [SRM-14806]: created MSHealthReport entity and method to … (#48384)
* feat: [SRM-14806]: created ChangeIncidentReport entity and method to generate it

* added UT

* ran code format checkstyle

* ran code format checkstyle

* removed extra code

* feat: [SRM-14806]: worked on review comments

* test failed